# claude-workspace

./: .gitignore  .gitleaks.toml  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  GFM-COMPREHENSIVE-DELETEME.md  GFM-RENDER-TEST-DELETEME.md  README.md  browser-automation-mcp.py  conftest.py  mcp_utils.py  pyproject.toml  python-interpreter-client.py  python-interpreter-mcp.py  selenium-browser-automation-mcp.py  uv-wrapper.py
cc-lib/: pyproject.toml
cc-lib/cc_lib/: __init__.py  background_tasks.py  batch_loader.py  claude_binary_patching.py  claude_cli_introspection.py  claude_context.py  claude_process.py  cli.py  concurrency_tracker.py  error_boundary.py  exceptions.py  library_boundary.py  logging_setup.py  macho.py  os_process.py  phantom.py  picklable.py  project.py  session_tracker.py  settings_env.py  system_deps.py  transcript_spine.py  types.py
cc-lib/cc_lib/mcp/: __init__.py  bridge.py  registry.py  server_registry.py  socket_name.py  uds_bridge.py
cc-lib/cc_lib/schemas/: __init__.py  _literal_relax.py  auth_recipe.py  base.py  hooks.py  profile_state.py
cc-lib/cc_lib/utils/: __init__.py  atomic_write.py  unicode_match.py
cc-lib/scripts/: spine_corpus_audit.py
local-lib/: pyproject.toml
local-lib/local_lib/: __init__.py  background_tasks.py  batch_loader.py  concurrency_tracker.py  error_boundary.py  library_boundary.py  phantom.py  session_tracker.py  types.py  utils.py
local-lib/local_lib/schemas/: __init__.py  hooks.py
mcp/browser-automation/: pyproject.toml  server.py
mcp/browser-automation/browser_automation/: __init__.py  server.py
mcp/claude-remote-audio/: .gitignore  README.md  pyproject.toml
mcp/claude-remote-audio/claude_remote_audio/: bluetooth.py  cache.py  exceptions.py  orchestrator.py  paths.py
mcp/claude-remote-audio/patches/: 0001-swap-bundled-sox-to-sox_ng.patch  0002-roc-send-channels-flag.patch
mcp/claude-remote-audio/scripts/: bootstrap.sh
mcp/claude-remote-audio/swift/: claude-coreaudio-probe.swift  claude-coreaudio-volume.swift  claude-tcc-probe.swift
mcp/claude-remote-bash/: README.md  pyproject.toml
mcp/claude-remote-bash/claude_remote_bash/: __init__.py  auth.py  cache.py  client.py  client_config.py  context.py  daemon.py  discovery.py  dispatch.py  exceptions.py  executor.py  models.py  mount.py  mount_supervisor.py  mounts_registry.py  nfsd_manager.py  paths.py  protocol.py  resolve.py  selector.py
mcp/claude-remote-bash/crb-nfsd/: Cargo.toml  README.md  pyproject.toml
mcp/claude-session/: .gitignore  .pre-commit-config.yaml  359n8FNDeCE9FN1vvr359AbjYGY.xml  CLAUDE.md  GRANOLA_ANALYSIS_INDEX.md  GRANOLA_ARCHITECTURE_ANALYSIS.md  GRANOLA_EXPLORATION_SUMMARY.md  GRANOLA_QUICK_REFERENCE.md  MODEL_IMPROVEMENTS.md  MODEL_REVIEW_FINDINGS.md  README.md  README_GRANOLA_ANALYSIS.txt  VERIFICATION_COMPLETE.md  mcp-server.py  pyproject.toml  session-catalog.txt  session-schema.json
mcp/claude-session/.claude/: settings.local.json
mcp/claude-session/claude_session/: __init__.py  exceptions.py  introspection.py  launcher.py  migrations.py  paths.py  protocols.py  types.py
mcp/claude-session/docs/: feature-flags-and-tweakcc.md  handoff-api-schema-capture.md  intercepting-claude-api.md  mcpsearch-guide.md  potential-improvements-measurements.md  roadmap-session-intelligence.md  session-memory.md  task-management-system.md  thinking.md
mcp/claude-session/scripts/: analyze_model_quality.py  check_corrupted_sessions.py  check_mutable_annotations.py  check_path_markers.py  check_schema_typing.py  clean_hallucinations.py  export_schema.py  fix_broken_session_resume.py  intercept_traffic.py  test_process_tree.py  validate_api_schemas.py  validate_captures.py  validate_models.py  watch_session.py
mcp/claude-session/src/: base_model.py  cli.py  cli_logger.py  domain.py  exceptions.py  introspection.py  launcher.py  markers.py  mcp_server.py  mcp_utils.py  migrations.py  models.py  notepad.md  paths.py  types.py
mcp/claude-session/tests/: __init__.py  test_fixtures.py
mcp/document-search/: README.md  docker-compose.bench.yaml  docker-compose.yaml  file-type-viz-options.html  pipeline_test.py  pyproject.toml
mcp/document-search/bm25-rs/: Cargo.toml  pyproject.toml
mcp/document-search/docs/: auto-tuning-research.md  possible-improvements.md
mcp/document-search/document_search/: __init__.py  paths.py  search_config.py  search_path.py  server.py
mcp/document-search/jsonl-chunker-rs/: Cargo.toml  pyproject.toml
mcp/document-search/test_data/: TEST_QUERIES.md  test_company_info.json  test_complex_email.eml  test_employees.csv  test_multipart_email.eml  test_project_docs.md  test_short_boilerplate.txt  test_simple_email.eml  test_technical_spec.txt
mcp/dynamic-tools-demo/: pyproject.toml
mcp/dynamic-tools-demo/dynamic_tools_demo/: server.py
mcp/granola-kit/: README.md  pyproject.toml
mcp/granola-kit/granola_kit/: exceptions.py
mcp/grok-kit/: README.md  pyproject.toml
mcp/grok-kit/api-spec/: openapi.yaml
mcp/grok-kit/grok-kit-sdk/: README.md  USAGE.md  pyproject.toml
mcp/grok-kit/grok_kit/: __init__.py  auth.py  exceptions.py  service.py  transport.py
mcp/imessage-kit/: README.md  pyproject.toml
mcp/imessage-kit/imessage_kit/: __init__.py  attachments.py  contacts.py  db.py  parser.py  sender.py  service.py  sources.py  system.py  types.py
mcp/playwright-browser/: pyproject.toml
mcp/playwright-browser/playwright_browser/: __init__.py
mcp/preflight-check/: README.md  pyproject.toml
mcp/preflight-check/preflight_check/: __init__.py  report.py  runner.py
mcp/python-interpreter/: README.md  client.py  pyproject.toml  server.py
mcp/python-interpreter/python_interpreter/: __init__.py  client.py  discovery.py  driver.py  jetbrains.py  manager.py  models.py  registry.py  server.py  service.py
mcp/selenium-browser/: PLAN-interaction-tools.md  README.md  pyproject.toml
mcp/selenium-browser-automation/: PLAN-interaction-tools.md  README.md  pyproject.toml  server.py
mcp/selenium-browser-automation/docs/: browser-data-taxonomy.md  claude-in-chrome.md  profile-state-persistence.md  (+1 more)
(+919 files in other folders)
