[project]
name = "claude-workspace"
version = "0.1.0"
requires-python = ">=3.13"
readme = "README.md"

# Empty dependencies at root - each workspace member has its own
dependencies = []

[tool.uv]
# Root package is not installable - it's just a workspace container
package = false

[tool.uv.workspace]
# Workspace members - each must have its own pyproject.toml
members = [
    "local-lib",
    "mcp/browser-automation",
    "mcp/document-search",
    "mcp/python-interpreter",
    "mcp/selenium-browser-automation",
    # "hooks" - decide later if hooks should be workspace member or stay inline
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# Ruff Configuration
# =============================================================================

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez (timezone safety)
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "FLY",  # flynt (f-string conversion)
    "I",    # isort
    "PERF", # perflint (performance)
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    "DTZ011",  # date.today() without timezone is fine for date-only ops
    "E501",    # line length handled by formatter
    "SIM102",  # allow nested if statements
    "SIM103",  # allow explicit if-return-false for clarity
    "SIM108",  # allow if-else over ternary
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "single"

# =============================================================================
# Mypy Configuration
# =============================================================================

[tool.mypy]
python_version = "3.13"
plugins = ["plugins/pydantic_replace.py"]
strict = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR:$MYPY_CONFIG_FILE_DIR/stubs:$MYPY_CONFIG_FILE_DIR/scripts"
exclude = [
    ".venv",
    "scratch",
]

[[tool.mypy.overrides]]
module = "typer.completion"
no_implicit_reexport = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
# pythonpath: repo root on sys.path so unit tests can `from plugins... import`
pythonpath = ["."]
# --mypy-only-local-stub: silence site-package errors in mypy subprocess.
# pytest-mypy-plugins passes --no-silence-site-packages by default (!),
# which is the opposite of mypy's own default. See typeddjango/pytest-mypy-plugins#134.
addopts = "--mypy-only-local-stub"
testpaths = ["tests"]

# =============================================================================
# Development Dependencies
# =============================================================================

[dependency-groups]
dev = [
    "bashlex",
    "gitpython>=3.1",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5", # Required for pydantic.mypy plugin
    "pymupdf-stubs>=1.26.1.post1",
    "pytest>=9.0.2",
    "pytest-mypy-plugins>=3.3.0",
    "ruff>=0.14.10",
    "typer>=0.9.0",
    "types-psutil>=7.2.1.20251231",
    "types-pyyaml>=6.0.12.20250915",
]