[project]
name = "claude-workspace"
version = "0.1.0"
requires-python = ">=3.13"
readme = "README.md"

# Empty dependencies at root - each workspace member has its own
dependencies = []

[tool.uv]
# Root package is not installable - it's just a workspace container
package = false

[tool.uv.workspace]
# Workspace members - each must have its own pyproject.toml
members = [
    "cc-lib",
    "mcp/browser-automation",
    "mcp/claude-session",
    "mcp/document-search",
    "mcp/python-interpreter",
    "mcp/selenium-browser-automation",
    "stubs",
    # "hooks" - decide later if hooks should be workspace member or stay inline
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -- Ruff Configuration -------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez (timezone safety)
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "FLY",  # flynt (f-string conversion)
    "I",    # isort
    "PERF", # perflint (performance)
    "PL",   # pylint
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    "DTZ011",  # date.today() without timezone is fine for date-only ops
    "E501",    # line length handled by formatter
    "PLR09",   # too-many-branches/arguments/statements/returns
    "PLR2004", # magic-value-comparison
    "PLW2901", # redefined-loop-name — line = line.strip() is idiomatic
    "RUF100",  # unused-noqa — pre-emptive noqa for custom linters / future rules
    "SIM102",  # allow nested if statements
    "SIM103",  # allow explicit if-return-false for clarity
    "SIM105",  # allow try/except/pass over contextlib.suppress
    "SIM108",  # allow if-else over ternary
]

[tool.ruff.lint.per-file-ignores]
"mcp/claude-session/scripts/intercept_traffic.py" = [
    "PLW0603",  # global statement — mitmproxy addon caching pattern
]
"mcp/claude-session/claude_session/**/__init__.py" = [
    "RUF022",  # __all__ sorting — intentionally grouped by category
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "single"

# -- Mypy Configuration -------------------------------------------------------

[tool.mypy]
python_version = "3.13"
plugins = ["plugins/pydantic_replace.py"]
strict = true
enable_error_code = ["ignore-without-code"]
disallow_any_generics = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
exclude = [
    ".venv",
    "scratch",
    "tests/linters/edge_cases",  # intentionally bad code — linter test inputs
    "mcp/document-search",  # fastembed not in workspace root venv
    "tests/document_search",  # imports from mcp/document-search
]

[[tool.mypy.overrides]]
module = "typer.completion"
no_implicit_reexport = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

# -- Pytest Configuration -----------------------------------------------------

[tool.pytest.ini_options]
# --mypy-only-local-stub: silence site-package errors in mypy subprocess.
# pytest-mypy-plugins passes --no-silence-site-packages by default (!),
# which is the opposite of mypy's own default. See typeddjango/pytest-mypy-plugins#134.
addopts = "--mypy-only-local-stub"
asyncio_mode = "auto"
# pythonpath: repo root on sys.path so unit tests can `from plugins... import`
pythonpath = ["."]
testpaths = ["tests"]
# Default-deny: all warnings are errors. Third-party noise gets targeted ignores.
# Fix root cause; never blindly suppress with filters.
filterwarnings = [
    "error",
    # SWIG C extension types (SwigPyPacked, SwigPyObject, swigvarlink) lack __module__
    # on Python 3.13+. Upstream SWIG issue — fastembed/onnxruntime transitive dependency.
    "ignore:builtin type Swig.*:DeprecationWarning",
    "ignore:builtin type swigvarlink.*:DeprecationWarning",
]

# -- Custom Linter Configuration ----------------------------------------------

[tool.strict-typing-linter.per-file-ignores]
# Test infrastructure
"tests/**" = ["mutable-type", "loose-typing", "missing-all", "class-ordering"]
"tests/linters/edge_cases/**" = ["skip-file"]

# MCP servers
"mcp/document-search/bm25-rs/tests/**" = ["missing-all", "ordering"]

# claude-session
"mcp/claude-session/scripts/**" = ["mutable-type", "loose-typing", "tuple-field"]

[tool.exception-safety-linter.per-file-ignores]
"tests/linters/edge_cases/**" = ["skip-file"]

[tool.reexport-linter.per-file-ignores]
"tests/linters/edge_cases/**" = ["skip-file"]

[tool.suppression-rationale-linter.per-file-ignores]
"tests/linters/edge_cases/**" = ["skip-file"]

[tool.shebang-check.per-file-ignores]
"tests/linters/edge_cases/**" = ["skip-file"]

# -- Development Dependencies -------------------------------------------------

[dependency-groups]
dev = [
    "anthropic>=0.75.0",
    "bashlex",
    "gitpython>=3.1",
    "lazy-object-proxy>=1.12.0",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5", # Required for pydantic.mypy plugin
    "pymupdf-stubs>=1.26.1.post1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mypy-plugins>=3.3.0",
    "ruff>=0.14.10",
    "typer>=0.9.0",
    "types-psutil>=7.2.1.20251231",
    "types-pyyaml>=6.0.12.20250915",
]
