[project]
name = "claude-workspace"
version = "0.1.0"
requires-python = ">=3.13"
readme = "README.md"

# Empty dependencies at root - each workspace member has its own
dependencies = []

[tool.uv]
# Root package is not installable - it's just a workspace container
package = false

[tool.uv.workspace]
# Workspace members - each must have its own pyproject.toml
members = [
    "cc-lib",
    "mcp/browser-automation",
    "mcp/claude-session",
    "mcp/document-search",
    "mcp/python-interpreter",
    "mcp/selenium-browser-automation",
    "stubs",
    # "hooks" - decide later if hooks should be workspace member or stay inline
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -- Ruff Configuration -------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear (common bugs: mutable defaults, zip strict, closures)
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez (timezone safety)
    "E",    # pycodestyle errors
    "EXE",  # flake8-executable (shebang/permission checks)
    "F",    # pyflakes
    "FLY",  # flynt (f-string conversion)
    "G",    # flake8-logging-format (lazy % formatting in logging)
    "I",    # isort
    "PERF", # perflint (performance)
    "PIE",  # flake8-pie (unnecessary pass, startswith/endswith tuple)
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "TRY",  # tryceratops (exception handling patterns)
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    # Evaluated and not enforced — rule sets
    "A",       # flake8-builtins — all violations are API conventions (format, id) or upstream stubs
    "ERA",     # eradicate — 100% false positives on linter directives and doc examples
    "FBT",     # flake8-boolean-trap — too opinionated for this codebase
    "N",       # pep8-naming — conflicts with camelCase Pydantic fields from JSON schemas
    "PTH",     # flake8-use-pathlib — style preference, os.path is fine
    "S",       # flake8-bandit — too many false positives (subprocess, exec in MCP servers)
    "T20",     # flake8-print — scripts legitimately use print() for CLI output
    "TC",      # type-checking imports — 484 violations, deferred (needs batch Pydantic testing)
    # Evaluated and not enforced — individual rules from enabled sets
    "PT011",   # pytest.raises too broad — our tests already assert on exc_info.value.args
    "RET504",  # unnecessary assignment before return — intermediate assignments aid type narrowing and debugging
    "RET505",  # unnecessary else/elif after return — explicit else communicates mutual exclusivity
    "RET508",  # unnecessary else after break — same style preference as RET505
    "TRY003",  # long exception messages — would require single-use exception classes for every error string
    "TRY300",  # consider else block — code already works correctly, else adds nesting
    "TRY301",  # abstract raise to inner function — reduces CLI error handling readability
    "TRY400",  # use .exception() instead of .error() — already enforced by custom EXC006 rule
    # Existing style preferences
    "DTZ011",  # date.today() without timezone is fine for date-only ops
    "E501",    # line length handled by formatter
    "PLR09",   # too-many-branches/arguments/statements/returns
    "PLR2004", # magic-value-comparison
    "PLW2901", # redefined-loop-name — line = line.strip() is idiomatic
    "RUF100",  # unused-noqa — pre-emptive noqa for custom linters / future rules
    "SIM102",  # allow nested if statements
    "SIM103",  # allow explicit if-return-false for clarity
    "SIM105",  # allow try/except/pass over contextlib.suppress
    "SIM108",  # allow if-else over ternary
]

[tool.ruff.lint.per-file-ignores]
"mcp/claude-session/scripts/intercept_traffic.py" = [
    "PLW0603",  # global statement — mitmproxy addon caching pattern
]
"mcp/claude-session/claude_session/**/__init__.py" = [
    "RUF022",  # __all__ sorting — intentionally grouped by category
]
"tests/linters/edge_cases/**" = [
    "B012",   # return/break in finally — intentional bad-code test inputs
    "B015",   # pointless comparison — intentional bad-code test inputs
    "B018",   # useless expression — intentional bad-code test inputs
    "B904",   # raise without from — intentional bad-code test inputs
    "TRY201", # verbose raise — intentional bad-code test inputs
]

[tool.ruff.lint.flake8-bugbear]
# B008 flags function calls in default arguments (evaluated once, not per-call).
# These framework calls are designed to be evaluated once at definition time —
# typer uses them to register CLI parameters, fastapi for dependency injection.
extend-immutable-calls = ["typer.Option", "typer.Argument", "fastapi.Depends"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "single"

# -- Mypy Configuration -------------------------------------------------------

[tool.mypy]
python_version = "3.13"
plugins = ["plugins/pydantic_replace.py"]
strict = true
enable_error_code = ["ignore-without-code"]
disallow_any_generics = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
exclude = [
    ".venv",
    "scratch",
    "tests/linters/edge_cases",  # intentionally bad code — linter test inputs
    "mcp/document-search",  # fastembed not in workspace root venv
    "tests/document_search",  # imports from mcp/document-search
]

[[tool.mypy.overrides]]
module = "typer.completion"
no_implicit_reexport = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

# -- Pytest Configuration -----------------------------------------------------

[tool.pytest.ini_options]
# --mypy-only-local-stub: silence site-package errors in mypy subprocess.
# pytest-mypy-plugins passes --no-silence-site-packages by default (!),
# which is the opposite of mypy's own default. See typeddjango/pytest-mypy-plugins#134.
addopts = "--mypy-only-local-stub"
asyncio_mode = "auto"
# pythonpath: repo root on sys.path so unit tests can `from plugins... import`
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = ["scratch", ".venv", "node_modules", "__pycache__"]
# Default-deny: all warnings are errors. Third-party noise gets targeted ignores.
# Fix root cause; never blindly suppress with filters.
filterwarnings = [
    "error",
    # SWIG C extension types (SwigPyPacked, SwigPyObject, swigvarlink) lack __module__
    # on Python 3.13+. Upstream SWIG issue — fastembed/onnxruntime transitive dependency.
    "ignore:builtin type Swig.*:DeprecationWarning",
    "ignore:builtin type swigvarlink.*:DeprecationWarning",
]

# -- Custom Linter Configuration ----------------------------------------------

[tool.strict-typing-linter.per-file-ignores]
# Test infrastructure
"**/tests/**" = ["mutable-type", "loose-typing", "missing-all", "class-ordering"]
"tests/linters/edge_cases/**" = ["skip-file"]


[tool.exception-safety-linter.per-file-ignores]
"tests/linters/edge_cases/**" = ["skip-file"]

[tool.reexport-linter.per-file-ignores]
"tests/linters/edge_cases/**" = ["skip-file"]

[tool.suppression-rationale-linter.per-file-ignores]
"tests/linters/edge_cases/**" = ["skip-file"]

[tool.uv-script-linter.per-file-ignores]
"tests/linters/edge_cases/**" = ["skip-file"]

# -- Development Dependencies -------------------------------------------------

[dependency-groups]
dev = [
    "anthropic>=0.75.0",
    "bashlex",
    "gitpython>=3.1",
    "lazy-object-proxy>=1.12.0",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5", # Required for pydantic.mypy plugin
    "pymupdf-stubs>=1.26.1.post1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mypy-plugins>=3.3.0",
    "ruff>=0.14.10",
    "typer>=0.9.0",
    "types-psutil>=7.2.1.20251231",
    "types-pyyaml>=6.0.12.20250915",
]
