[project]
name = "cc-lib"
version = "0.1.0"
description = "Shared utilities for claude-workspace."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.5",
    "filelock>=3.20.0",
    "more-itertools>=10.8.0",
    "psutil>=7.1.3",
    "pydantic>=2.12.4",
    "typer",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"