[project]
name = "local-lib"
version = "0.1.0"
description = "Shared utilities for claude-workspace MCP servers"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.5",
    "filelock>=3.20.0",
    "psutil>=7.1.3",
    "pydantic>=2.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
