[project]
name = "browser-automation-mcp"
version = "0.1.0"
description = "Browser Automation MCP Server - Playwright-based browser control with stealth mode"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.5",
    "local-lib @ git+https://github.com/chrisguillory/claude-workspace.git#subdirectory=local-lib",
    "playwright",
    "playwright-stealth",
    "pyyaml",
]

[project.scripts]
mcp-browser-server = "browser_automation.server:main"

[tool.uv.sources]
# Local development override: workspace reference takes precedence over git URL
local-lib = { workspace = true }

[tool.hatch.build]
# Package directory to include in distribution
include = ["browser_automation/"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
