[project]
name = "claude-session-mcp"
version = "0.1.0"
description = "MCP server for archiving and managing Claude Code sessions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.4.0",
    "expiringdict>=1.2.2",
    "fastmcp>=2.13.0.2",
    "filelock>=3.20.1",
    "httpx>=0.28.1",
    "lazy-object-proxy>=1.12.0",
    "psutil>=7.2.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "typer>=0.20.0",
    "uuid6>=2025.0.1",
    "zstandard>=0.25.0",
]

[project.scripts]
claude-session = "src.cli.main:main"
mcp-server = "src.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez (timezone safety)
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "FLY",  # flynt (f-string conversion)
    "I",    # isort
    "PERF", # perflint (performance)
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    "DTZ011",  # date.today() without timezone is fine for date-only ops
    "E501",    # line length handled by formatter
    "SIM102",  # allow nested if statements
    "SIM108",  # allow if-else over ternary
]
# External linter code from scripts/check_mutable_annotations.py
external = ["mutable-type"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true
mypy_path = "stubs"
exclude = [
    ".venv",
    "scratch",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[dependency-groups]
dev = [
    "anthropic>=0.75.0",
    "mitmproxy>=12.2.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "types-psutil>=7.2.1.20251231",
]

