[project]
name = "document-search-mcp"
version = "0.3.0"
description = "Document Search MCP Server - Semantic search over local documents"
requires-python = ">=3.13"
dependencies = [
    "fastembed>=0.7.4",
    "fastmcp>=2.12.5",
    "filelock>=3.20.0",
    "google-genai>=1.59.0",
    "langchain-text-splitters>=1.1.0",
    "local-lib",
    "more-itertools>=10.8.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "qdrant-client>=1.16.2",
    "rerankers[transformers]>=0.10.0",
    "tenacity>=9.1.2",
]

[project.scripts]
mcp-document-search = "document_search.server:main"

[tool.uv.sources]
local-lib = { workspace = true }

[tool.hatch.build]
include = ["document_search/"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
