[project]
name = "dynamic-tools-demo-mcp"
version = "0.1.0"
description = "Demo MCP server for dynamic tool registration at runtime"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.0",
]

[project.scripts]
mcp-dynamic-tools-demo-server = "dynamic_tools_demo.server:main"

[tool.hatch.build]
include = ["dynamic_tools_demo/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"