[project]
name = "playwright-browser"
version = "0.1.0"
description = "Browser Automation MCP Server - Playwright-based browser control with stealth mode"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.5",
    "cc-lib @ git+https://github.com/chrisguillory/claude-workspace.git#subdirectory=cc-lib",
    "playwright",
    "playwright-stealth",
    "pyyaml",
]

[project.scripts]
playwright-browser-mcp = "playwright_browser.mcp.main:main"

[tool.uv.sources]
# Local development override: workspace reference takes precedence over git URL
cc-lib = { workspace = true }

[tool.hatch.build]
# Package directory to include in distribution
include = ["playwright_browser/"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
