[project]
name = "python-interpreter-mcp"
version = "0.4.0"
description = "Python Interpreter MCP Server - Persistent Python execution environment"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "fastmcp>=2.12.5",
    "httpx>=0.28.1",
    "local-lib @ git+https://github.com/chrisguillory/claude-workspace.git#subdirectory=local-lib",
    "pandas",
    "pydantic",
    "uvicorn",
]

[project.scripts]
mcp-py-server = "python_interpreter.server:main"
mcp-py-client = "python_interpreter.client:main"

[tool.uv.sources]
# Local development override: workspace reference takes precedence over git URL in dependencies.
# Remote uvx installations use the git URL; local development uses workspace (faster, sees live changes).
local-lib = { workspace = true }

[tool.hatch.build]
# Package directory to include in distribution
include = ["python_interpreter/"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
