[project]
name = "python-interpreter"
version = "0.4.0"
description = "Python Interpreter MCP Server - Persistent Python execution environment"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi",
    "fastmcp>=2.12.5",
    "filelock",
    "httpx>=0.28.1",
    "cc-lib @ git+https://github.com/chrisguillory/claude-workspace.git#subdirectory=cc-lib",
    "pandas",
    "pydantic",
    "uvicorn",
]

[project.scripts]
python-interpreter = "python_interpreter.cli.main:main"
python-interpreter-mcp = "python_interpreter.mcp.main:main"

[tool.uv.sources]
# Local development override: workspace reference takes precedence over git URL in dependencies.
# Remote uvx installations use the git URL; local development uses workspace (faster, sees live changes).
cc-lib = { workspace = true }

[tool.hatch.build]
# Package directory to include in distribution
include = ["python_interpreter/"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
