[project]
name = "selenium-browser-automation-mcp"
version = "0.5.1"
description = "Selenium Browser Automation MCP Server - CDP stealth injection for Cloudflare bypass"
requires-python = ">=3.13"
dependencies = [
    "ccl-chromium-reader",
    "dfindexeddb>=20251109",
    "fastmcp>=2.12.5",
    "httpx",
    "pycryptodome>=3.23.0",
    "pydantic>=2.0.0",
    "pyyaml",
    "selenium",
]

[project.scripts]
selenium-server = "selenium_browser_automation.server:main"

[tool.hatch.build]
# Package directory to include in distribution
include = ["selenium_browser_automation/"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
ccl-chromium-reader = { git = "https://github.com/cclgroupltd/ccl_chromium_reader.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
