[project]
name = "selenium-browser"
version = "0.7.0"
description = "Selenium Browser Automation MCP Server - CDP stealth injection for Cloudflare bypass"
requires-python = ">=3.13"
dependencies = [
    "ccl-chromium-reader",
    "dfindexeddb>=20251109",
    "fastapi>=0.124.0",
    "fastmcp>=2.12.5",
    "httpx",
    "cc-lib @ git+https://github.com/chrisguillory/claude-workspace.git#subdirectory=cc-lib",
    "pycryptodome>=3.23.0",
    "pydantic>=2.0.0",
    "pyyaml",
    "selenium",
    "uvicorn>=0.38.0",
]

[project.scripts]
selenium-browser = "selenium_browser.cli.main:main"
selenium-browser-mcp = "selenium_browser.mcp.main:main"

[tool.hatch.build]
# Package directory to include in distribution
include = ["selenium_browser/"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
ccl-chromium-reader = { git = "https://github.com/cclgroupltd/ccl_chromium_reader.git" }
cc-lib = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
