[package]
name = "jsonl-chunker-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "jsonl_chunker_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
serde_json = "1"
rayon = "1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
